--- a/routing-element/angular.json
+++ b/routing-element/angular.json
@@ -22,7 +22,6 @@
             "main": "projects/test-app/src/main.ts",
             "polyfills": "projects/test-app/src/polyfills.ts",
             "tsConfig": "projects/test-app/tsconfig.app.json",
-            "aot": true,
             "assets": [
               "projects/test-app/src/favicon.ico",
               "projects/test-app/src/assets"
@@ -36,7 +35,13 @@
             "dist/custom-elements/runtime-es2017.js",
             "dist/custom-elements/main-es2017.js"
             
-            ]
+            ],
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "buildOptimizer": false,
+            "sourceMap": true,
+            "optimization": false,
+            "namedChunks": true
           },
           "configurations": {
             "production": {
@@ -66,7 +71,8 @@
                 }
               ]
             }
-          }
+          },
+          "defaultConfiguration": ""
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -188,7 +194,6 @@
             "main": "projects/custom-elements/src/main.ts",
             "polyfills": "projects/custom-elements/src/polyfills.ts",
             "tsConfig": "projects/custom-elements/tsconfig.app.json",
-            "aot": true,
             "assets": [
               "projects/custom-elements/src/favicon.ico",
               "projects/custom-elements/src/assets"
@@ -196,7 +201,13 @@
             "styles": [
               "projects/custom-elements/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "buildOptimizer": false,
+            "sourceMap": true,
+            "optimization": false,
+            "namedChunks": true
           },
           "configurations": {
             "production": {
@@ -226,7 +237,8 @@
                 }
               ]
             }
-          }
+          },
+          "defaultConfiguration": ""
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
